--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-react": "^7.6.3",
     "antd-mobile": "^2.3.1",
+    "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.12.2",
     "css-loader": "^3.2.0",
