--- a/package.json
+++ b/package.json
@@ -28,13 +28,18 @@
     "rc-form": "^2.4.9",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "style-loader": "^1.0.0",
     "styled-components": "^4.4.0",
     "url-loader": "^2.2.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2"
+  },
+  "dependencies": {
+    "vuex": "^3.1.1"
   }
 }
