--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "devDependencies": {
     "@babel/cli": "^7.6.4",
     "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-react": "^7.6.3",
     "antd-mobile": "^2.3.1",
@@ -40,6 +42,8 @@
     "webpack-dev-server": "^3.8.2"
   },
   "dependencies": {
-    "vuex": "^3.1.1"
+    "react-weui": "^1.2.2",
+    "vuex": "^3.1.1",
+    "weui": "^1.1.0"
   }
 }
