--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
+    "react-sticky": "^6.0.3",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "style-loader": "^1.0.0",
